--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "vite": "^4.0.0",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
