--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "vite": "^4.0.0",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
+    "vite": "^6.2.3",
+    "vite-plugin-react": "^4.3.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "serve": "^14.2.4",
-    "vite": "^6.2.3"
+    "serve": "^14.2.4"
   }
 }
