--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s build"
+    "start": "serve -s build -l 10000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
